Fix scrollbar contrast issues

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -37,7 +37,7 @@ hr {
 }
 
 * {
-  scrollbar-color: var(--primary-bg) var(--secondary-bg); /* thumb color | track color */
+  scrollbar-color: var(--secondary-color--60) var(--secondary-bg); /* thumb color | track color */
 }
 
 #app {
